--- a/confix.glade
+++ b/confix.glade
@@ -3961,7 +3961,18 @@ Wrong parameters may crash your system</property>
             <property name="can_focus">False</property>
             <property name="layout_style">end</property>
             <child>
-              <placeholder/>
+              <object class="GtkButton" id="set_date_button">
+                <property name="label" translatable="yes">Set Idefix time</property>
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <property name="receives_default">True</property>
+                <signal name="clicked" handler="set_date" swapped="no"/>
+              </object>
+              <packing>
+                <property name="expand">True</property>
+                <property name="fill">True</property>
+                <property name="position">0</property>
+              </packing>
             </child>
             <child>
               <object class="GtkButton">
@@ -4452,6 +4463,7 @@ Improper values can ruin your filtering scheme. </property>
                 <property name="can_focus">True</property>
                 <property name="model">profiles_store</property>
                 <property name="headers_visible">False</property>
+                <property name="reorderable">True</property>
                 <property name="search_column">0</property>
                 <property name="fixed_height_mode">True</property>
                 <property name="show_expanders">False</property>
