--- a/assistant.glade
+++ b/assistant.glade
@@ -388,6 +388,7 @@ Don't forget to do this before you close the program ! </property>
   </object>
   <object class="GtkWindow" id="create_user_window">
     <property name="can_focus">False</property>
+    <property name="title" translatable="yes">Create User Assistant</property>
     <property name="deletable">False</property>
     <child>
       <placeholder/>
@@ -1422,35 +1423,9 @@ If you don't know it, it is possible to add it later  in the "Users and categori
                           <object class="GtkLabel">
                             <property name="visible">True</property>
                             <property name="can_focus">False</property>
-                            <property name="label" translatable="yes">Click on the </property>
-                            <attributes>
-                              <attribute name="weight" value="bold"/>
-                              <attribute name="foreground" value="#cccc00000000"/>
-                            </attributes>
-                          </object>
-                          <packing>
-                            <property name="expand">False</property>
-                            <property name="fill">True</property>
-                            <property name="position">0</property>
-                          </packing>
-                        </child>
-                        <child>
-                          <object class="GtkImage">
-                            <property name="visible">True</property>
-                            <property name="can_focus">False</property>
-                            <property name="stock">gtk-apply</property>
-                          </object>
-                          <packing>
-                            <property name="expand">False</property>
-                            <property name="fill">True</property>
-                            <property name="position">1</property>
-                          </packing>
-                        </child>
-                        <child>
-                          <object class="GtkLabel">
-                            <property name="visible">True</property>
-                            <property name="can_focus">False</property>
-                            <property name="label" translatable="yes">button to validate your data, and then click "Next"</property>
+                            <property name="halign">center</property>
+                            <property name="hexpand">True</property>
+                            <property name="label" translatable="yes">Enter one or more addresses and then click "Next"</property>
                             <attributes>
                               <attribute name="weight" value="bold"/>
                               <attribute name="foreground" value="#a4a400000000"/>
